chore: add theme config
add config of my own theme

--- a/_config.yml
+++ b/_config.yml
@@ -31,14 +31,14 @@ site:
     width: 40
     height: 40
     url: ../images/logo.png
-  title: Hexo # 页面title
+  title: Narthil's Studio # 页面title
   favicon: /favicon.png
   board: <p>欢迎交流与分享经验!</p> # 站点公告
-  copyright: false # 底部版权信息
+  copyright: true # 底部版权信息
 
 # config
 config:
-  skin: # 主题颜色 theme-black theme-blue theme-green theme-purple
+  skin: theme-black # 主题颜色 theme-black theme-blue theme-green theme-purple
   layout: main-center # 布局方式 main-left main-center main-right
   toc: true # 是否开启文章章节目录导航
   menu_highlight: false # 是否开启当前菜单高亮显示
@@ -47,7 +47,7 @@ config:
 
 # Pagination
 pagination:
-  number: false
+  number: true
   prev: 
     alwayShow: true
   next:
@@ -58,7 +58,7 @@ sidebar: right
 widgets:
   - board  
   - category
-  - tag
+  # - tag
   - tagcloud
   - archive
   - recent_posts
@@ -81,7 +81,7 @@ search:
 
 # Donate
 donate:
-  enable: true
+  enable: false
   # 微信打赏
   wechatpay:
     qrcode: images/donate/wechatpayimg.png
@@ -95,39 +95,24 @@ donate:
 # weibo,qq,qzone,wechat,tencent,douban,diandian,facebook,twitter,google,linkedin
 share:
   enable: true  # 是否启用分享
-  sites: weibo,qq,wechat,facebook,twitter  # PC端显示的分享图标
-  mobile_sites: weibo,qq,qzone  # 移动端显示的分享图标
+  sites: qq,wechat,facebook,twitter  # PC端显示的分享图标
+  mobile_sites: weibo,qq,wechat  # 移动端显示的分享图标
 
 # Github
 github: 
-  username: cofess  # github username
+  username: Narthill  # github username
 
 # Comment
 # Gitment
 # Introduction: https://imsun.net/posts/gitment-introduction/
 comment:
-  type: valine  # 启用哪种评论系统
-  disqus:  # enter disqus shortname here
-  youyan: 
-    uid: 1783844 # enter youyan uid 
-  livere:
-    uid: # enter youyan uid 
-  gitment:
-    githubID: 
-    repo: 
-    ClientID: 
-    ClientSecret: 
-    lazy: false
-  valine: # Valine. https://valine.js.org
-    appid:  # your leancloud application appid
-    appkey:  # your leancloud application appkey
-    notify: false # mail notifier , https://github.com/xCss/Valine/wiki
-    verify: false # Verification code
-    placeholder: Just go go # comment box placeholder
-    avatar: mm # gravatar style
-    meta: nick,mail,link # custom comment header
-    pageSize: 10 # pagination size
-    visitor: false # Article reading statistic https://valine.js.org/visitor.html
+  type: gitalk  # 启用哪种评论系统
+  gitalk:
+    owner: Narthill
+    admin : Narthill
+    repo: studio-comment
+    clientID : 98e99111bcf436b107a2
+    clientSecret : 7347f6a53192015b9f8eecade5efffea563d27d8
 
 # douban 豆瓣书单
 # Api：
@@ -176,53 +161,33 @@ fb_app_id:
 # profile
 profile:
   enabled: true # Whether to show profile bar
-  avatar: images/avatar.jpg
-  gravatar: # Gravatar email address, if you enable Gravatar, your avatar config will be overriden
-  author: 昵称
-  author_title: Web Developer & Designer
-  author_description: 个人简介。
-  location: Shenzhen, China
-  follow: https://github.com/cofess
+  avatar: #images/avatar.jpg
+  gravatar: narthil.ch@gmail.com
+  author: Narthil
+  author_title: fuck me !
+  author_description: 学生,考研中,主力语言是java和c++,对web全栈有较浓的兴趣。菜鸡一只
+  location: Chongqing, China
+  follow: https://github.com/Narthill
   # Social Links
   social:
     links:
-      github: https://github.com/cofess
-      weibo: http://weibo.com/cofess
-      twitter: https://twitter.com/iwebued
-      # facebook: /
-      # dribbble: /
-      behance: https://www.behance.net/cofess
+      github: https://github.com/Narthill
+      telegram: https://t.me/Narthill
       rss: atom.xml
     link_tooltip: true # enable the social link tooltip, options: true, false
   # My Skills 
   skills:
-    Git: ★★★☆☆
-    Gulp: ★★★☆☆
-    Javascript: ★★★☆☆
-    HTML+CSS: ★★★☆☆
-    Bootstrap: ★★★☆☆
-    ThinkPHP: ★★★☆☆
-    平面设计: ★★★☆☆
+
   # My Personal Links
   links:
-    Github: https://github.com/cofess
-    Blog: http://blog.cofess.com
-    微博: http://weibo.com/cofess
-    花瓣: http://huaban.com/cofess
-    Behance: https://www.behance.net/cofess
+    Github: https://github.com/Narthill
+    Blog: https://narthil.me
   # My Personal Labels
   labels:
-    - 前端
-    - 前端开发
-    - 前端重构
-    - Web前端
-    - 网页重构
-  # My Personal Works
-  works:
-    name:
-      link: http://www.example.com
-      date: 2016
+    - web前端
+    - java
+    - c++
   # My Personal Projects
   projects:
-    cofess/gulp-startpro: https://github.com/cofess/gulp-startpro
-    cofess/hexo-theme-pure: https://github.com/cofess/hexo-theme-pure
+    Narthil/Image_processing: https://github.com/Narthill/Image_processing
+    Narthil/image_similarity_64: https://github.com/Narthill/image_similarity_64
